src/css/custom.css
/* ... */
.footer__links .convex-icon-link {
  width: 1.25rem;
  height: 1.5rem;
  margin: 0;
  display: block;
  background-color: var(--ifm-navbar-link-color);
  font-size: 0;
}

.footer__links .convex-icon-link:hover {
  background-color: var(--ifm-navbar-link-hover-color);
}

.footer__links .convex-github-logo {
  mask: url("../../static/img/github-logo.svg") no-repeat center;
}

.footer__links .convex-twitter-logo {
  mask: url("../../static/img/twitter-logo.svg") no-repeat center;
}

.footer__links .convex-discord-logo {
  mask: url("../../static/img/discord-logo.svg") no-repeat center;
}
/* END: Footer icons */

/* Fix the "Back" button in the sidebar on mobile */
.navbar-sidebar__back {
  background: var(--ifm-hover-overlay);
}

/* Mobile Table of Contents dont have targetable classnames, reset their background */
main article > div {
  --ifm-menu-color-background-active: var(--ifm-hover-overlay);
}

/* Make sure ToC doesn't just blend with content that overlaps left side of the
  content column, like YouTube video players */
.theme-doc-toc-desktop {
  background-color: var(--convex-toc-background-color);
}

/* START: StepByStep styling */
.convex-step-by-step {
  margin-bottom: 2.5rem;
}

.convex-step {
  margin-bottom: 2.5rem;
}

@media (min-width: 997px) {
  .convex-step-by-step,
  .convex-full-width {
    width: calc(
      min(var(--ifm-container-width-xl), 100vw - var(--doc-sidebar-width)) - 4 *
        var(--convex-container-padding-horizontal)
    );
    z-index: 100;
    position: relative;
    background: var(--convex-opaque-background-color);
    box-shadow: var(--convex-opaque-background-color) 0 0 10px 10px;
    /* Fixes a Safari bug where the table of contents would sometimes appear on
    top of this element while scrolling. This transform has no visual effect,
    but creates a new stacking context to keep things in order.
    See: https://linear.app/convex/issue/CX-3830/
    */
    -webkit-transform: translate3d(0, 0, 0);
  }

  .convex-step {
    display: grid;
    grid-template-columns: minmax(0, 5fr) minmax(0, 7fr);
    gap: 20px;
    margin-bottom: 0;
  }
}

.convex-step code {
  overflow-x: auto;
}
/* END: StepByStep styling */

.convex-inline-code-with-copy-button {
  display: inline-flex;
  line-height: 0.95rem;
  padding-top: 0.2rem;
}

.convex-inline-code-copy-button {
  line-height: 0;
}

.convex-inline-code-copy-button button {
  display: flex;
  align-items: center;
  background: var(--prism-background-color);
  color: var(--prism-color);
  padding-left: 0.5rem;
  line-height: 0;
  transition: opacity 200ms ease-in-out;
  opacity: 0.4;
}

.convex-inline-code-copy-button button:hover {
  opacity: 1;
}

/* START: TourGuide styling */

.convex-tour-guide {
  display: flex;
  flex-direction: column;
  justify-content: left;
  gap: 1em;
  padding: 1.5rem;
  background-color: var(--ifm-color-info-contrast-background);
  border: var(--ifm-alert-border-width) solid var(--ifm-alert-border-color);
  border-left-width: var(--ifm-alert-border-left-width);
  border-radius: var(--ifm-alert-border-radius);
  box-shadow: var(--ifm-alert-shadow);
  margin-bottom: 2rem;
}

@media (min-width: 997px) {
  .convex-tour-guide {
    flex-direction: row;
  }

  .convex-tour-guide > div {
    max-width: 50%;
  }
}

.markdown .convex-tour-guide li > p {
  margin-top: 0;
}

.convex-tour-guide > div > p {
  margin-bottom: 0;
}

.convex-tour-guide h5 {
  text-transform: uppercase;
}

.convex-tour-guide img {
  border: 1px solid var(--ifm-color-info-dark);
  border-radius: 8px;
}

.convex-side-by-side {
  display: flex;
  flex-direction: column;
}

.convex-side-by-side video {
  width: 100%;
}

.convex-side-by-side caption {
  display: block;
  font-style: italic;
}

@media (min-width: 500px) {
  .convex-side-by-side video {
    max-width: 500px;
  }
}

@media (min-width: 997px) {
  .convex-side-by-side {
    display: grid;
    grid-template-columns: 60% auto;
    gap: 2rem;
  }

  .theme-admonition .convex-side-by-side {
    gap: 1rem;
  }

  .convex-side-by-side.convex-balanced {
    grid-template-columns: 1fr 1fr;
  }
}

/* END: TourGuide styling */

/* START: Zen of Convex styling */

.zen-tip {
  margin-bottom: 2.5em;
}
h2.zen-header {
  margin-top: 2em;
}
.zen-tip h3,
.zen-header {
  display: flex;
  gap: 0.3em;
  align-items: center;
}
.zen-tip svg,
.zen-header svg {
  width: 2rem;
  height: 2rem;
}
.zen-do h3 > svg {
  color: var(--convex-zen-do-color);
}
.zen-do-not h3 > svg {
  color: var(--convex-zen-do-not-color);
}

/* END: Zen styling */

/* Main page hero text */
.convex-hero {
  font-size: 1.25rem;
}

/* Helper for centering images */
.center-image {
  margin: 0 auto;
}

/* Fix pages without Table of Contents on the right should not be
too wide, except for all the quick starts */
html:not([class*="docs-doc-id-quickstart/"]) main > .container > .row .col {
  max-width: 966px;
}

/* Border for screenshots that are confusing if left on white background */
.screenshot-border {
  border-radius: var(--ifm-code-border-radius);
  box-shadow: var(--ifm-global-shadow-lw);
}

/* Make space for language selector in code blocks */
.codeblock-header {
  display: flex;
  justify-content: space-between;
}
/* ... */

